# fire_simulator

./: .gitignore  CMakeLists.txt  Data.ipynb  Fire Policy.drawio  README.md  analysis.ipynb  build.sh  data_analysis.ipynb  postprocess copy.ipynb  postprocess.ipynb  postprocess_ammar.ipynb  preprocess.ipynb  preprocess_ammar.ipynb  pub.env  sample_model.ipynb
data/: .gitignore
docker/: Dockerfile  readme.md
docker/data/: emergency.lua
docs/: Doxyfile.in
include/: enums.h  my_cpp_project.h
include/config/: EnvLoader.h
include/data/: apparatus.h  fire_truck.h  geometry.h  incident.h  location.h  station.h
include/enums/: event_type.h
include/environment/: environment_model.h
include/models/: fire.h  onnx_predictor.h  processors.h
include/policy/: dispatch_policy.h  firebeats_dispatch.h  nearest_dispatch.h
include/services/: chunks.h  queries.h
include/simulator/: action.h  event.h  event_data.h  simulator.h  state.h  station_action.h
include/utils/: constants.h  error.h  error.hpp  helpers.h  loaders.h  logger.h  util.h
models/: .gitignore
scripts/: preprocess_to_generate_data.py  process_csv.py  requirements.txt  sample_model.ipynb  sklearn_to_onnx.ipynb
src/: CMakeLists.txt  main.cpp
src/data/: ems_vehicle.cpp  fire_truck.cpp  geometry.cpp  incident.cpp  station.cpp
src/environment/: environment_model.cpp
src/models/: fire.cpp  onnx_predictor.cpp  processors.cpp
src/policy/: dispatch_policy.cpp  firebeats_dispatch.cpp  nearest_dispatch.cpp
src/services/: chunks.cpp  queries.cpp
src/simulator/: event.cpp  simulator.cpp  state.cpp  station_action.cpp
src/utils/: loaders.cpp  logger.cpp  util.cpp
test/: test_dispatch.cpp  test_location.cpp
tests/: CMakeLists.txt  test_beats.cpp  test_dispatch.cpp  test_main.cpp  test_reports.cpp
